DT-1897: 🐛 Fix info endpoint not working after java upgrade